Upgrade the version of the Surefire and Failsafe Maven plugins to run JUnit 5 tests. Refine by the same time the configuration of both the plugins in order run correctly the JUnit 5 tests (they ran badly in parallel way). Upgrade also the version of other plugins.